Envoy/two-clusters/envoy.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
  - name: listener_antarctica
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 1000    
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: edge
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            virtual_hosts:
            - name: forward_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: cluster_antarctica
                  timeout: 8s
  - name: listener_europe
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 2000    
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: edge
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            virtual_hosts:
            - name: forward_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: cluster_europe 
                  timeout: 8s                 
  - name: listener_asia
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 3000    
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: edge
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            virtual_hosts:
            - name: forward_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: cluster_asia
                  timeout: 8s
  - name: listener_america
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 4000    
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: edge
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            virtual_hosts:
            - name: forward_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: cluster_america     
                  timeout: 8s           
  clusters:
  - name: cluster_antarctica
    type: STRICT_DNS # allows using dns name in "socket_address.address" field
    connect_timeout: 5s
    load_assignment:
      cluster_name: cluster_antarctica
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: frozen-camp
                port_value: 5000
        - endpoint:
            address:
              socket_address:
                address: frosty-colony
                port_value: 5000     
  - name: cluster_europe
    type: STRICT_DNS # allows using dns name in "socket_address.address" field
    connect_timeout: 5s
    load_assignment:
      cluster_name: cluster_europe
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: danzig
                port_value: 5000
        - endpoint:
            address:
              socket_address:
                address: cracovia
                port_value: 5000                  
  - name: cluster_asia
    type: STRICT_DNS # allows using dns name in "socket_address.address" field
    connect_timeout: 5s
    load_assignment:
      cluster_name: cluster_america
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: chiang_rai
                port_value: 5000
        - endpoint:
            address:
              socket_address:
                address: luang_prabang
                port_value: 5000   
  - name: cluster_america
    # circuit_breakers:
    #   thresholds:
    #     max_connections: 1
    #     max_pending_requests: 1
    #     max_requests: 1
    type: STRICT_DNS # allows using dns name in "socket_address.address" field
    connect_timeout: 5s
    load_assignment:
      cluster_name: cluster_america
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: cleveland
                port_value: 5000
        - endpoint:
            address:
              socket_address:
                address: tucson
                port_value: 5000
